# sidequest2

./: .gitignore  CMakeLists.txt  RAPPORT_TECHNIQUE.md  RAPPORT_TECHNIQUE_COMPLET.md  RAPPORT_TECHNIQUE_PARTIE2.md  RAPPORT_TECHNIQUE_PARTIE3.md  README.md  launch.bat
assets/: .gitkeep
cicd/: api-smoke.ps1  check-tunnel.sh  launch.bat
documentation/: RAPPORT_TECHNIQUE_COMPLET.md
src/: chat_window.cpp  chat_window.h  main.cpp  matrix_client.cpp  matrix_client.h  stb_image.h  texture_manager.cpp  texture_manager.h
